<resources>
    <string name="app_name">ChipIn</string>
    <string name="title">Chip\'In</string>
    <string name="copyright_notice">All rights reserved © 2020</string>
    <string name="new_activity">New Activity</string>
    <string name="load_activity">Load Activity</string>
    <string name="settings">Settings</string>
    <string name="activity_name">Name</string>
    <string name="activity_date">Date</string>
    <string name="buddies">Buddies</string>
    <string name="select_date">Select date</string>
    <string name="enter_name">Enter name</string>
    <string name="buddy_name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="cost">Cost:</string>
    <string name="expense_name">What:</string>
    <string name="enter_expense">Enter expense</string>
    <string name="enter_cost">Enter cost</string>
</resources>
