<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#009688" android:id="@+id/mainView">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:src="@mipmap/ic_launcher_foreground" android:cropToPadding="false"
            android:adjustViewBounds="false" android:scaleType="centerCrop"/>
    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView"
            android:id="@+id/buttonNewActivity"
            android:text="@string/new_activity"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/bungee" android:layout_centerInParent="true" android:background="#FFC400"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:textColor="#363030"/>
    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/buttonLoadActivity"
            android:text="@string/load_activity"
            android:layout_below="@+id/buttonNewActivity"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/bungee" android:layout_centerInParent="true" android:background="#FFC400"
            android:textColor="#363030" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <Button android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/buttonSettings"
            android:text="@string/settings"
            android:layout_below="@+id/buttonLoadActivity"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/bungee" android:layout_centerInParent="true" android:background="#FFC400"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:textColor="#363030"/>
</RelativeLayout>
