<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewActivity" android:background="#009688">
    <include
            android:id="@+id/tool_bar"
            layout="@layout/new_tool_bar"/>

    <RelativeLayout android:id="@+id/field_container" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="10dp"
                    android:layout_below="@id/tool_bar"
                    android:gravity="center">
        <RelativeLayout android:id="@+id/name_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
            <TextView android:layout_width="100dp"
                      android:layout_height="50dp"
                      android:id="@+id/name_label"
                      android:text="@string/activity_name"
                      android:textSize="24sp"
                      android:gravity="center"
                      android:fontFamily="@font/bungee" android:textColor="@color/black"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:id="@+id/name_value"
                      android:inputType="text"
                      android:singleLine="true"
                      android:textSize="18sp"
                      android:layout_toEndOf="@id/name_label"
                      android:fontFamily="@font/bungee" android:hint="@string/enter_name"
                      android:backgroundTint="#FFC400"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/date_field"
                        android:layout_below="@id/name_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
            <TextView android:layout_width="100dp"
                      android:layout_height="50dp"
                      android:id="@+id/date_label"
                      android:text="@string/activity_date"
                      android:textSize="24sp"
                      android:gravity="center"
                      android:fontFamily="@font/bungee" android:textColor="@color/black"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:id="@+id/date_picker"
                      android:inputType="date"
                      android:singleLine="true"
                      android:textSize="18sp"
                      android:layout_toEndOf="@id/date_label"
                      android:fontFamily="@font/bungee" android:hint="@string/select_date"
                      android:backgroundTint="#FFC400"
                      android:focusable="false"/>
        </RelativeLayout>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/buddy_label"
                  android:text="@string/buddies"
                  android:textSize="24sp"
                  android:fontFamily="@font/bungee"
                  android:layout_below="@id/date_field" android:layout_marginStart="10dp"
                  android:layout_marginTop="10dp" android:textColor="@color/black"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Tap on an avatar to view actions"
                  android:textSize="12sp"
                  android:layout_below="@id/buddy_label"
                  android:layout_marginStart="10dp"
                  android:layout_marginTop="5dp"
                  android:textColor="@color/black"
                  android:id="@+id/instruction"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_below="@id/instruction"
                      android:id="@+id/scrollContainer"
                      android:layout_height="wrap_content"
        >
            <ScrollView
                    android:layout_width="match_parent"
                    android:id="@+id/scrollView"
                    android:layout_marginBottom="100dp"
                    android:layout_height="match_parent" android:fadeScrollbars="false"
                    android:scrollbarThumbHorizontal="@color/yellow" android:scrollbarThumbVertical="@color/yellow">
                <org.apmem.tools.layouts.FlowLayout android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/buddy_list"
                                                    android:layout_marginTop="10dp"
                                                    android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                                                    android:layout_marginBottom="10dp">
                    <ImageButton android:layout_width="100dp" android:layout_height="100dp"
                                 android:id="@+id/add_buddy"
                                 android:layout_margin="10dp"
                                 android:background="@drawable/buddy_frame"/>
                </org.apmem.tools.layouts.FlowLayout>
            </ScrollView>
        </LinearLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonContainer"
                        android:gravity="center"
                        android:layout_alignParentBottom="true" android:background="#009688">
            <Button android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:id="@+id/save_activity"
                    android:text="@string/save"
                    android:layout_margin="16dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/bungee" android:layout_centerInParent="true"
                    android:background="#DCDCDC"
                    android:enabled="false"
                    android:textColor="#808080" android:layout_marginEnd="10dp"/>
            <Button android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:id="@+id/delete_activity"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:layout_toEndOf="@id/save_activity"
                    android:fontFamily="@font/bungee" android:layout_centerInParent="true"
                    android:background="#DCDCDC"
                    android:enabled="false"
                    android:textColor="#808080" android:layout_marginStart="10dp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
