<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="#00B0FF">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/buddy_avatar"
               android:background="@drawable/avatar_01"
               android:scaleType="centerCrop"
               android:layout_centerHorizontal="true"/>
    <ImageView android:layout_width="30dp"
               android:layout_height="30dp"
               android:id="@+id/edit_sign"
               android:background="@android:drawable/ic_menu_edit"
               android:backgroundTint="#FFC400"
               android:foreground="@android:drawable/ic_menu_edit"
               android:foregroundTint="#FFC400"
               android:layout_alignBottom="@id/buddy_avatar"
               android:layout_alignEnd="@id/buddy_avatar"
               android:scaleType="centerCrop"
               android:layout_centerHorizontal="true"/>
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/cancel_buddy"
               android:layout_alignParentEnd="true"
               android:background="@android:drawable/ic_delete" android:backgroundTint="#FFC400"
               android:layout_marginEnd="10dp"/>
    <RelativeLayout android:id="@+id/name_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/buddy_avatar"
                    android:gravity="center">
        <TextView android:layout_width="100dp"
                  android:layout_height="50dp"
                  android:id="@+id/buddy_name_label"
                  android:text="@string/buddy_name"
                  android:textSize="24sp"
                  android:gravity="center"
                  android:fontFamily="@font/bungee"/>
        <EditText android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:id="@+id/buddy_name_value"
                  android:inputType="textCapWords"
                  android:singleLine="true"
                  android:textSize="18sp"
                  android:layout_toEndOf="@id/buddy_name_label"
                  android:fontFamily="@font/bungee" android:hint="@string/enter_name" android:backgroundTint="#FFC400"
        />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_below="@+id/name_field">
        <Button android:layout_width="80dp"
                android:layout_height="50dp"
                android:id="@+id/save_buddy"
                android:text="@string/save"
                android:textAlignment="center"
                android:fontFamily="@font/bungee" android:layout_centerInParent="true" android:background="#DCDCDC"
                android:enabled="false"
                android:textColor="#808080" android:layout_marginEnd="10dp"/>
        <Button android:layout_width="80dp"
                android:layout_height="50dp"
                android:id="@+id/delete_buddy"
                android:text="@string/delete"
                android:textAlignment="center"
                android:layout_toEndOf="@id/save_buddy"
                android:fontFamily="@font/bungee" android:layout_centerInParent="true" android:background="#DCDCDC"
                android:enabled="false"
                android:textColor="#808080" android:layout_marginStart="10dp"/>
    </RelativeLayout>
</RelativeLayout>